<resources>
    <string name="app_name">Catch Coins</string>
    <string name="catch_gol_coins">Catch Gold Coins</string>

    <!--    buttons     -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_game">Start Game</string>
    <string name="best_result">Show best result</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="start_new_game">Start New Game</string>
    <string name="continue_game">Continue game</string>
    <string name="close_button">Close</string>
    <string name="clear">Clear Results</string>

    <!--    dialogs     -->
    <string name="are_you_sure">Are you sure you want to clear the game max score?</string>
    <string name="progress_status">You have saved game progress. Do you want to continue?</string>
    <string name="want_to_leave">Do you want to leave the Game?</string>
    <string name="want_to_exit">Are you sure you want to exit the game?</string>

    <!--    other     -->
    <string name="coin_rain">coin rain</string>
    <string name="dower_chest">dower chest</string>
    <string name="red_label">red label</string>
    <string name="back_icon">back icon</string>
    <string name="coin_counter">coin counter</string>
    <string name="basket">basket</string>
    <string name="coin">coin</string>
    <string name="rock">rock</string>
    <string name="max_score_dashboard">max score dashboard</string>
    <string name="max_score">Max Score</string>
    <string name="game_over">Game Over</string>
    <string name="you_lose_your_coins">You lose your coins</string>
    <string name="plug">plug</string>

</resources>