<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/castle"
    tools:context=".fragments.MenuFragment">

    <ImageView
        android:id="@+id/coin_rain_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/coin_rain"
        android:scaleType="fitXY"
        android:src="@drawable/coins_rain2" />

    <ImageView
        android:id="@+id/dower_chest_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dower_chest"
        android:scaleType="centerCrop"
        android:src="@drawable/dower_chest"
        app:layout_constraintStart_toStartOf="@+id/game_title"
        app:layout_constraintTop_toBottomOf="@+id/game_title" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/red_label"
        android:scaleType="fitXY"
        android:src="@drawable/red_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/irish_grover"
        android:shadowColor="@color/main"
        android:shadowRadius="10"
        android:text="@string/catch_gol_coins"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@drawable/button"
        android:fontFamily="@font/irish_grover"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/game_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continue_game_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"

        android:fontFamily="@font/irish_grover"
        android:text="@string/continue_game"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/start_game_button"
        app:layout_constraintStart_toStartOf="@+id/start_game_button"
        app:layout_constraintTop_toBottomOf="@id/start_game_button" />

    <Button
        android:id="@+id/best_result_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/irish_grover"
        android:text="@string/best_result"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/start_game_button"
        app:layout_constraintStart_toStartOf="@+id/start_game_button"
        app:layout_constraintTop_toBottomOf="@id/continue_game_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="@font/irish_grover"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/best_result_button"
        app:layout_constraintStart_toStartOf="@+id/best_result_button"
        app:layout_constraintTop_toBottomOf="@id/best_result_button" />

    <FrameLayout
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/max_score_dashboard"
            android:src="@drawable/max_dashboard" />

        <TextView
            android:id="@+id/max_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/irish_grover"
            android:shadowColor="@color/main"
            android:shadowRadius="10"
            android:text="@string/max_score"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:fontFamily="@font/irish_grover"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coin_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/irish_grover"
                android:shadowColor="@color/main"
                android:shadowRadius="10"
                android:text="1"
                android:textColor="#FAA03A"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/coin_counter"
                android:scaleType="fitCenter"
                android:src="@drawable/coin_counter" />

        </LinearLayout>

        <ImageView
            android:id="@+id/close_dashboard_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/close_button"
            android:src="@drawable/close_button" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>