<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/castle"
    tools:context=".fragments.GameFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/arrrow_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/irish_grover"
        android:shadowColor="@color/main"
        android:shadowRadius="10"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <ImageView
        android:id="@+id/coin_counter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/coin_counter"
        android:scaleType="fitCenter"
        android:src="@drawable/coin_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="-5dp"
        android:fontFamily="@font/irish_grover"
        android:shadowColor="@color/main"
        android:shadowRadius="10"
        android:text="10"
        android:textColor="#FAA03A"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/coin_counter"
        app:layout_constraintTop_toTopOf="@+id/coin_counter" />

    <ImageView
        android:id="@+id/basket"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/basket"
        android:src="@drawable/basket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/coin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/coin"
        android:src="@drawable/coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rock"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/rock"
        android:src="@drawable/rocks1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageView
        android:id="@+id/mushroom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/mushroom"
        android:rotation="180"
        android:src="@drawable/mushroom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

</androidx.constraintlayout.widget.ConstraintLayout>